--- a/README
+++ b/README
@@ -13,11 +13,10 @@ SoCs that Renesas build. Layer and board that supports following:
 
     * meta-rcar-gen3
         - Renesas Electronics Corporation. Salvator-X (R8A7795/R8A7796)
-    * meta-rcar-gen2
-        - Renesas Electronics Corporation. Alt (R8A7794)
-        - Renesas Electronics Corporation. Gose (R8A7793)
-        - Renesas Electronics Corporation. Koelsch (R8A7791)
-        - Renesas Electronics Corporation. Lager (R8A7790)
+        - Renesas Electronics Corporation. Salvator-X.View (R8A7795)
+        - Renesas Electronics Corporation. H3ULCB (R8A7795)
+        - Renesas Electronics Corporation. H3ULCB.HAD (R8A7795)
+        - Renesas Electronics Corporation. H3ULCB.View (R8A7795)
 
 Please see README in the layer directory about the description of the board.
 
