KF: fix DU RGB flickering, remove SDR50/104
1) fix DU RGB port flickeringby presclaing clock in VC5
2) limit clock for DU RGB in driver adv7511 to 100Mhz
this is according to Gen3 manual limitation for this DU port
3) update README
4) remove SDR50/104 from onboard KF

--- a/README
+++ b/README
@@ -13,3 +13,4 @@ Supported Boards/Machines
         - Renesas Electronics Corporation. ULCB View (R8A7795/R8A7796)
         - Renesas Electronics Corporation. ULCB HAD (R8A7795)
         - Renesas Electronics Corporation. ULCB Kingfisher (R8A7795/R8A7796)
+        - Renesas Electronics Corporation. ULCB Videobox (R8A7795)
