Update supported boards info

--- a/README
+++ b/README
@@ -12,5 +12,7 @@ Supported Boards/Machines
         - Renesas Electronics Corporation. Salvator-X View (R8A7795/R8A7796)
         - Renesas Electronics Corporation. ULCB View (R8A7795/R8A7796)
         - Renesas Electronics Corporation. ULCB HAD (R8A7795)
-        - Renesas Electronics Corporation. ULCB Kingfisher (R8A7795/R8A7796)
+        - Renesas Electronics Corporation. ULCB Kingfisher (R8A7795/R8A7796/R8A7797)
         - Renesas Electronics Corporation. ULCB Videobox (R8A7795)
+        - Renesas Electronics Corporation. Eagle (R8A7797)
+        - Renesas Electronics Corporation. V3MSK (R8A7797)
